prometheus-operator/helm/webhook/webhook-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dingdingapi-svc
  namespace: monitoring
  labels:
    app: dingdingapi
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: dingdingapi 
  selector:
    app: dingdingapi
